# TCSPC-SNSPD-Surface-Scan

./: .gitmodules  OBJECTIVES.md  app-backend.py  bidim-scan-60x60.json  readme-crude.txt  requirements.txt  scan-dump.json  scan-settings.json
Andor Shamrock-iDus/: andor-shamrock.cpp
Devices/Andor Shamrock-iDus/: andor-shamrock.h
Devices/Montana/: montana_cryoadvance_controls.py
IDQ-TC1000/: pyproject.toml
IDQ-TC1000/Original-Dev-Code/IDQ Time-Tagger/Timestamp_acquisition_multi_tc/multi_tc_acquisition/: config.py  connect.py  setup.py
IDQ-TC1000/src/idq_tc1000/: counter.py
IDQ-TC1000/src/idq_tc1000.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
IDQ/Custom-Code/Time-Tagger/: counter.py
IDQ/Original-Dev-Code/Histogram_acquisition/: histogram_acquisition.py
IDQ/Original-Dev-Code/Histogram_acquisition_filtred/: histogram_acquisition_filtred.py
IDQ/Original-Dev-Code/Inputs_status/: inputs_status.py
IDQ/Original-Dev-Code/Precise_counters_acquisition_over_time/: precise_coincidence_counters_acquisition.py  precise_input_counters_acquisition.py
IDQ/Original-Dev-Code/Read_binary_timestamps/: read_binary_timestamps.py
IDQ/Original-Dev-Code/Timestamp_acquisition/: timestamps_acquisition.py
IDQ/Original-Dev-Code/Timestamp_acquisition_multi_tc/: config.json  timestamp_acquisition_multi_tc.py
IDQ/Original-Dev-Code/Timestamp_acquisition_multi_tc/multi_tc_acquisition/: __init__.py  acquisition.py  config_schema.json  const.py  utils.py
IDQ/Original-Dev-Code/Timestamp_acquisition_sync_stream/: timestamps_acquisition_sync_stream.py
Main-App/Scan-Routines/: scan_data.py
Montana/: montana_cryoadvance_controls.py
Montana-CryoAdvance-50/: pyproject.toml
Montana-CryoAdvance-50/src/montana_cryoadvance_50/: montana_cryoadvance_info.py
Original-Dev-Code/IDQ Time-Tagger/Coincidence_counters_acquisition/: coincidence_counters_acquisition.py
Original-Dev-Code/IDQ Time-Tagger/Timestamp_acquisition_multi_tc/: README.txt
Original-Dev-Code/IDQ Time-Tagger/Timestamp_acquisition_stream/: timestamps_acquisition_stream.py
devices/: idq_tc1000_counter.py  idq_tc1000_device.py  idq_tc1000_photon_counter.py  idq_tc1000_photon_tol.py  idq_tc1000_tol.py  montana_cryoadvance_controls.py  montana_cryoadvance_controls_async.py  montana_cryoadvance_status.py
devices/tests/: graph_buttons.py  montana_cryoadvance_controls_async.py  telnetlib-ctc100-connection.py
devices/tests/routes/: idq_routes.py
results/: bidim-scan-settings-60x60.json  scan-10x10-tol-settings.json  scan-10x10-tol.json  scan-linear-10-tol-settings.json  scan-linear-10-tol.json
routes/: __init__.py  idq_routes.py
scans/: 1D_counter_scan.py  example_scan_script.py  graph_functions.py  multidim_scan_example.py  multidim_scan_script.py  result_visualizer.py  scan_data_structures.py
(+1 files in other folders)
